# near-to-x

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml
.github/workflows/: near-rewards.yml
crates/social-linking/: Cargo.toml
crates/social-linking/src/: lib.rs
crates/twitter-oracle-contract/: Cargo.toml  README.md
crates/twitter-oracle-contract/src/: lib.rs  types.rs
crates/twitter-oracle-node/: Cargo.toml  README.md
crates/twitter-oracle-node/src/: main.rs  types.rs
frontend/: bun.lockb  package.json
frontend/src/: App.tsx
frontend/src/components/: LinkTwitterAccount.tsx
